// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Config Plugin iOS Tests - urlTypes adds url types to the Info.plist (with REVERSED_CLIENT_ID and GOOGLE_APP_ID) 1`] = `
{
  "CFBundleURLTypes": [
    {
      "CFBundleURLSchemes": [
        "com.googleusercontent.apps.SomeRandomClientIdString",
      ],
    },
    {
      "CFBundleURLSchemes": [
        "app-1234-1234-ios-1234",
      ],
    },
  ],
}
`;

exports[`Config Plugin iOS Tests - urlTypes adds encoded app ID url scheme when only GOOGLE_APP_ID is present (no REVERSED_CLIENT_ID) 1`] = `
{
  "CFBundleURLTypes": [
    {
      "CFBundleURLSchemes": [
        "app-1-123456789012-ios-1234567890abcdef",
      ],
    },
  ],
}
`;
